--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,14 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1.5rem;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -41,8 +41,8 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2.3rem;
+  font-weight: 450;
 }
 
 .title,
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 0rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -108,9 +108,136 @@
   margin-left: 0.5rem;
 }
 
+.main_nav
+{
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+.main_nav nav 
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main_nav ul
+{
+  display: flex;
+  gap: 5rem;
+  margin: 0;
+  padding: 0;
+}
+
+.main_nav li
+{
+  list-style: none;
+  font-size: 1.5rem;
+}
+
+/*customize image*/
+.coder
+{
+  margin: 0;
+  padding: 0;
+}
+
+.coder .img
+{
+  border-radius: 50%;
+  width: 200% !important;
+}
+
+/*blog */
+.blog 
+{
+  padding: 0 1rem;
+}
+.blog h2
+{
+  font-size: 3rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+
+/*blog item*/
+.blog_item h3
+{
+  font-size: 2rem;
+  font-weight: 450;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
+.blog_item p
+{
+  font-size: 1.3rem;
+  opacity: .5;
+  max-width: 50rem;
+  margin: .5rem 0 2rem 0;
+}
+
+.blog_item p a
+{
+  color: #03b2f9;
+  font-size: 1rem;
+  display: inline;
+}
+
+.para
+{
+  opacity: .6;
+  line-height: 1.7rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.mainBlog
+{
+  max-width: 60rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.mainBlog p:nth-child(2)
+{
+  text-align: center;
+}
+
+.slugContainer 
+{
+  padding: 0 1rem;
+}
+
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+@media (max-width: 556px) {
+  .main_nav ul {
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 432px) {
+  .main_nav ul {
+    gap: 2rem;
+  }
+}
+
+@media (max-width: 356px) {
+  .main_nav ul {
+    font-size: 1rem;
+    gap: 1rem;
   }
 }
